--- a/themes/LoveIt/layouts/_default/baseof.html
+++ b/themes/LoveIt/layouts/_default/baseof.html
@@ -16,6 +16,7 @@
         {{- partial "head/meta.html" . -}}
         {{- partial "head/link.html" . -}}
         {{- partial "head/seo.html" . -}}
+        {{ partial "mailerlite-head.html" . }}      <!-- Mailer Lite partial -->
     </head>
     <body data-header-desktop="{{ .Site.Params.header.desktopMode }}" data-header-mobile="{{ .Site.Params.header.mobileMode }}">
         {{- /* Check theme isDark before body rendering */ -}}
