--- a/layouts/shortcodes/mailerlite-form.html
+++ b/layouts/shortcodes/mailerlite-form.html
@@ -1,4 +1,2 @@
-<!-- MailerLite Trigger Button -->
-<button class="ml-onclick-form" onclick="ml('show', 'FWEopp', true)">
-      Subscribe to the Newsletter
-    </button>
+<!-- MailerLite Trigger Link -->
+<a class="ml-onclick-form" href="javascript:void(0)" onclick="ml('show', 'FWEopp', true)"> Click here </a>
